<resources>
    <string name="app_name">FootballSchedule</string>
    <string name="nama_liga">Nama Liga</string>
    <string name="twitter">twitter</string>
    <string name="gender">gender</string>
    <string name="country">country</string>
    <array name="league">
        <item>English League 1</item>
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
    </array>

    <array name="imageLanguange">
        <item>@drawable/img_10_english_league_1</item>
        <item>@drawable/img_1_english_premier_league</item>
        <item>@drawable/img_2_french_ligue_1</item>
        <item>@drawable/img_3_german_bundesliga</item>
        <item>@drawable/img_4_italian_serie_a</item>
        <item>@drawable/img_5_spanish_la_liga</item>
        <item>@drawable/img_6_american_mayor_league</item>
        <item>@drawable/img_7_portugeuese_premiera_liga</item>
        <item>@drawable/img_8_australian_a_league</item>
        <item>@drawable/img_9_scotish_premier_league</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="empty">-</string>
    <string name="separate">:</string>
</resources>
